OLD/kubernetes-cluster/nexus/nexus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  labels:
    app: nexus
spec:
  ingressClassName: nginx
  rules:
  - host: "nexus.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nexus-service
              port:
                number: 80
