OLD/kubernetes-cluster/nexus/nexus-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress2
  namespace: nexus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: nexus
spec:
  ingressClassName: nginx
  tls:
    - secretName: nexuspat-ssl
      hosts:
      - nexuspat.hechler.de               
  rules:
  - host: "nexuspat.hechler.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nexus-service
              port:
                number: 80
